# hometown

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  readme_md.md
notebooks/: main.ipynb  test.ipynb
src/config/: settings.py
src/consolidation/: consolidators.py
src/extraction/: __init__.py  extractors.py  validators.py
src/transformation/: geo_utils.py  processors.py
src/utils/: exceptions.py  logger.py
