[tool.poetry]
name = "hometown"
version = "0.1.0"
description = "Analytics case - Aerogeradores SIGEL/ANEEL"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
geopandas = "^0.14.0"
pandas = "^2.1.0"
retrying = "^1.3.4"
matplotlib = "^3.10.3"
pyarrow = "^20.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
notebook = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"